tests/parser/good/generic_type.hel
// @name generic_type
// @phase parser
// @expect success

type Option<T> =
    | None
    | Some<T>
    ;

type Either<L, R> =
    | Left<L>
    | Right<R>
    ;
