tests/parser/bad/generic_missing_gt.hel
// @name generic_missing_gt
// @phase parser
// @expect error

type Option<T = | None;
